--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,6 @@
     }
   ],
   "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "installCommand": "npm install"
 }
