--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=./",
+     "vercel-build": "vite build --base=/",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
