--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,10 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/$1"
+      "dest": "/index.html"
     }
   ],
+  "framework":"vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install"
