--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+#Dependencies
 node_modules
-.DS_Store
+.pnpm-store
+
+#Bulid outputs
 dist
 dist-ssr
 coverage
@@ -21,10 +23,17 @@ coverage
 .vscode/*
 !.vscode/extensions.json
 .idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-*.tsbuildinfo
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Netlify
+.netlify
